PH-20 Fixed profile image not showing

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   text-align: center;
   background-color: #282c34;
-  height: 100%;
+  min-height: 100%;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
