--- a/portfolio/src/components/Header/Header.css
+++ b/portfolio/src/components/Header/Header.css
@@ -6,10 +6,24 @@
     padding: 1rem 2rem;
 }
 
-.ProfilePicture {
-    border-radius: 50%;
+.profile-picture-container {
     width: 50px;
     height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #ccc;
+}
+
+.profile-picture {
+    display: flex;
+    width: auto;
+    height: 100%;
+    padding-top: 60%;
+    padding-left: 10%;
     object-fit: cover;
-    border: 2px solid white;
+    transform: scale(2.5);
 }
