--- a/portfolio/src/components/ProjectCardList/ProjectCardList.css
+++ b/portfolio/src/components/ProjectCardList/ProjectCardList.css
@@ -4,4 +4,5 @@
     gap: 50px;
     justify-content: center;
     width: 100%;
+    max-height: 100%;
 }
